2002-01-27  Bradford Hovinen  <hovinen@ximian.com>

	* mime-type-info.c (mime_type_info_load_all, mime_type_info_save):
	Rename override_category as use_category; give it the opposite
	meaning
	(reduce_supported_app_list, find_possible_supported_apps): Update
	according to the above

	* mime-edit-dialog.c (fill_dialog): Set
	use_category_defaults_toggle
	(store_data): Set override_category
	(mime_edit_dialog_init): Connect to
	use_category_defaults_toggled_cb
	(use_category_defaults_toggle_cb): Implement
	(default_action_changed_cb, populate_application_list)
	(populate_component_list): Call update_sensitivity; set
	sensitivity-controlling flags
	(update_sensitivity): Implement

	* mime-type-info.c (find_possible_supported_apps)
	(reduce_supported_app_list): Don't consider a MIME type if its
	override_category flag is set
	(mime_type_info_save): Set the override-category flag
	(mime_type_info_load_all): Load the override-category flag

	* service-edit-dialog.c (validate_data): Call get_service_info to
	handle case where the service was created and not yet committed
	(fill_dialog): Desensitize the look at content toggle if GnomeVFS
	doesn't support that protocol

	* mime-type-info.c (get_mime_type_info, get_mime_type_info_int):
	Implement

	* mime-edit-dialog.c (validate_data): Check if the MIME type is
	already known and we are adding a new type

	* service-edit-dialog.c (service_edit_dialog_init): Change dialog
	title

	* file-types-capplet.c (edit_count_cb): Rename from count_cb
	(selection_changed_cb): Initialize count
	(selection_changed_cb): Iterate on remove_count_cb and use that to
	set the sensitivity of the remove button
	(create_dialog): Desensitize the remove button

	* model-entry.c (model_entry_insert_child): Set the parent field
	(model_entry_remove_child): Reset the parent field
	(model_entry_remove_child): Set up the path before removing the
	entry from the list

	* service-info.c (load_all_services): Accept model